--- a/Learning websit.HTML
+++ b/Learning websit.HTML
@@ -8,7 +8,7 @@
 
    <body>
      <table cellspacing = 20>
-       <td><img src="Images/Ashtosh.Png" alt="Image cant be displayed"></td>
+       <td><img src="Ashtosh.Png" alt="Image cant be displayed"></td>
        <td>
          <h1>Ashtosh Tiwari</h1>
          <p><strong><em>A person that is trying to change himself a 180* people dont know whats about to happen Im gonn become unregnoziaby good</em> </strong></p>
